@@ -21,5 +21,5 @@
  */
 
 /* globbing.c */
-extern char **look_for_file (const char *path, const char *sec,
-			     const char *name, int cat, int match_case);
+extern char **look_for_file (const char *unesc_hier, const char *sec,
+			     const char *unesc_name, int cat, int match_case);
