@@ -1,3 +1,11 @@
+Thu Nov  7 01:32:29 GMT 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/globbing.c (match_in_directory): Don't use FNM_NOESCAPE flag
+	  to fnmatch().
+	  (look_for_file): Escape paths and names before passing them to
+	  match_in_directory().
+	* src/globbing.h: Update variable names in prototype.
+
 Wed Oct 23 02:12:43 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* tools/README: Remove reference to install-manpage.
